[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bson"
version = "0.5.10"
description = "BSON codec for Python"
readme = "README.rst"
authors = [
    { name = "Ayun Park", email = "iamparkayun@gmail.com" }
]
license = { text = "BSD" }
dependencies = [
    "python-dateutil>=2.4.0",
    "six>=1.9.0"
]
keywords = ["BSON", "codec"]
requires-python = ">=2.6"
classifiers = [
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6"
]

[project.urls]
Homepage = "http://github.com/py-bson/bson"

[tool.setuptools]
packages = ["bson"]
